# Devops-Toolkit

./: README.md  branch_managment.md  commit_managment.md  merge_options.md  remote_repo.md  repo_initialization.md
debian_packages/: bash_script_to_download_many_debs.sh  basic_commands.md  guide_to_create_deb_package.md
docker_container/: README.md  dockerfile.basic_commands
git/: README.md  branch_managment.md  remote_repo.md  repo_initialization.md
git/images/: README.md
linux/: basic_linux_command.md
python/: README.md
python/python_package_template/: CHANGELOG.md  pyproject.toml  setup.cfg
shell/: shell_configuration.md
tmux/: README.md
