[metadata]
name = python_package
version = 0.0.0
description = My package description
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords =
license =
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
    atlassian-python-api
    urllib3<=1.26.13
    python-jenkins
    GitPython
    tabulate
    termcolor
    rich

[options.package_data]
ci_monitor.html_templates = *.html

# [options.entry_points]
# console_scripts =
#     ci_monitor = ci_monitor.command_line:main

[flake8]
exclude = .git, __pycache__, build, dist
max-line-length = 120
max-complexity = 10
